--- a/src/notebooks/lab_vtkHandling.ipynb
+++ b/src/notebooks/lab_vtkHandling.ipynb
@@ -69,60 +69,50 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# l = z1 - 0.08\n",
-    "# l = np.append(l, x2)\n",
+    "# check the python version in this notebook\n",
+    "import sys\n",
+    "print(sys.version)\n",
     "\n",
-    "# plt.figure()\n",
-    "# plt.plot(l, dist, '-k')\n",
-    "# plt.show()"
+    "# install sklearn for python\n",
+    "# \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting field 'U' from 23 files in the directory: D:/tempData_depot/simData_FFS/FFS_ABL_01_old/postProcessing/sectionCuts_U/sub\n",
+      "Extracting field 'U' from 32 files in the directory: D:/tempData_depot/simData_FFS/FFS_ABL_01_old/postProcessing/sectionCuts_U/sub\n",
       "    File prefix: U_yNorm_\n",
       "    File suffix: \n",
       "    File extension: .vtk\n",
       "    No. of query points: 1100\n",
-      "    No. of files: 23\n",
+      "    No. of files: 32\n",
       "    Time multiplier: 0.0001\n",
       "\n",
       "  Extracting data at points\n",
-      "    time = 5.657 \t(1/23)\n",
-      "    time = 5.657 \t(2/23)\n",
-      "    time = 5.657 \t(3/23)\n",
-      "    time = 5.658 \t(4/23)\n",
-      "    time = 5.658 \t(5/23)\n",
-      "    time = 5.658 \t(6/23)\n",
-      "    time = 5.658 \t(7/23)\n",
-      "    time = 5.658 \t(8/23)\n",
-      "    time = 5.659 \t(9/23)\n",
-      "    time = 5.659 \t(10/23)\n",
-      "    time = 5.659 \t(11/23)\n",
-      "    time = 5.659 \t(12/23)\n",
-      "    time = 5.659 \t(13/23)\n",
-      "    time = 5.660 \t(14/23)\n",
-      "    time = 5.661 \t(15/23)\n",
-      "    time = 5.661 \t(16/23)\n",
-      "    time = 5.661 \t(17/23)\n",
-      "    time = 5.661 \t(18/23)\n",
-      "    time = 5.661 \t(19/23)\n",
-      "    time = 5.662 \t(20/23)\n",
-      "    time = 5.662 \t(21/23)\n",
-      "    time = 5.662 \t(22/23)\n",
-      "    time = 5.662 \t(23/23)\n",
       "\n",
       "  Collecting the data into pandas.DataFrame\n",
-      " Time elapsed: 9.1 s\n"
+      "\n",
+      "  Writing the data to file\n",
+      "    D:/tempData_depot/simData_FFS/FFS_ABL_01_old/postProcessing\\CL_vel_U_yNorm__UofT_5.657_5.6632.csv\n",
+      "    D:/tempData_depot/simData_FFS/FFS_ABL_01_old/postProcessing\\CL_vel_U_yNorm__VofT_5.657_5.6632.csv\n",
+      "    D:/tempData_depot/simData_FFS/FFS_ABL_01_old/postProcessing\\CL_vel_U_yNorm__WofT_5.657_5.6632.csv\n",
+      " Time elapsed: 10.8 s\n"
      ]
     }
    ],
@@ -131,152 +121,24 @@
     "#                                 kwargs_extSingle={'distanceTolerance':1e-3}, outputDir=r'D:/tempData_depot/simData_FFS/FFS_ABL_01_old/postProcessing', numOfSplitWriteFiles=3,\n",
     "#                                 outFilePrefix='CL_SurfP_')\n",
     "vel = foam.extractDataAtPoints(vtkDir=velDataDir, query_points=query_points_vel, fieldName='U', filePrefix='U_yNorm_', timeMultiplier=0.0001, showLog=True, num_processors=4,\n",
-    "                                kwargs_extSingle={'distanceTolerance':1e-3}, #outputDir=r'D:/tempData_depot/simData_FFS/FFS_ABL_01_old/postProcessing', numOfSplitWriteFiles=3,\n",
+    "                                kwargs_extSingle={'distanceTolerance':1e-3}, outputDir=r'D:/tempData_depot/simData_FFS/FFS_ABL_01_old/postProcessing', numOfSplitWriteFiles=1,\n",
     "                                outFilePrefix='CL_vel_')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             0          1          2          3          4          5     \\\n",
-      "1.1900  27.270000  27.305099  27.297501  27.273500  27.345301  27.455400   \n",
-      "1.1902  27.833799  27.870001  27.864901  27.843399  27.914900  28.018600   \n",
-      "1.1904  27.587200  27.624001  27.620199  27.599400  27.667900  27.762300   \n",
-      "1.1906  27.883499  27.920601  27.916401  27.894100  27.958000  28.041599   \n",
-      "1.1908  27.829300  27.866301  27.861099  27.835699  27.893400  27.967501   \n",
-      "1.1910  27.981199  28.017700  28.010900  27.981701  28.032801  28.098200   \n",
-      "1.1912  28.010000  28.045900  28.036800  28.003201  28.047600  28.105499   \n",
-      "1.1914  28.091900  28.126900  28.114700  28.075701  28.112900  28.164000   \n",
-      "1.1916  28.149099  28.183001  28.167000  28.122200  28.153000  28.198601   \n",
-      "1.1918  28.213400  28.246099  28.225401  28.174000  28.198500  28.237400   \n",
-      "1.1920  28.269600  28.300900  28.275101  28.216400  28.233999  28.267500   \n",
-      "1.1922  29.467600  29.497299  29.466299  29.400101  29.411800  29.440701   \n",
-      "\n",
-      "             6          7          8          9     ...      1090      1091  \\\n",
-      "1.1900  27.486601  27.305700  27.216900  27.119699  ... -0.118857 -0.111546   \n",
-      "1.1902  28.036301  27.846201  27.760201  27.662201  ... -0.108961 -0.111565   \n",
-      "1.1904  27.767599  27.573799  27.490101  27.390800  ... -0.099562 -0.114882   \n",
-      "1.1906  28.036900  27.841600  27.759199  27.657301  ... -0.093377 -0.119118   \n",
-      "1.1908  27.953100  27.757500  27.675301  27.570000  ... -0.090679 -0.129910   \n",
-      "1.1910  28.076200  27.881201  27.798000  27.689301  ... -0.067840 -0.124534   \n",
-      "1.1912  28.077299  27.882000  27.797400  27.685600  ... -0.048116 -0.121542   \n",
-      "1.1914  28.131201  27.935499  27.849300  27.735201  ... -0.028296 -0.120415   \n",
-      "1.1916  28.161600  27.964399  27.876200  27.760599  ... -0.005587 -0.114468   \n",
-      "1.1918  28.196199  27.999500  27.910000  27.794399  ...  0.024039 -0.098699   \n",
-      "1.1920  28.224800  28.029400  27.939100  27.823999  ...  0.053613 -0.086621   \n",
-      "1.1922  29.395599  29.200001  29.109600  28.995899  ...  0.092073 -0.064623   \n",
-      "\n",
-      "            1092      1093      1094      1095      1096      1097      1098  \\\n",
-      "1.1900 -0.111546 -0.064371 -0.064371 -0.024247 -0.024247 -0.010858 -0.010858   \n",
-      "1.1902 -0.111565 -0.064812 -0.064812 -0.022047 -0.022047 -0.007399 -0.007399   \n",
-      "1.1904 -0.114882 -0.071732 -0.071732 -0.024473 -0.024473 -0.006163 -0.006163   \n",
-      "1.1906 -0.119118 -0.080630 -0.080630 -0.032278 -0.032278 -0.008231 -0.008231   \n",
-      "1.1908 -0.129910 -0.095222 -0.095222 -0.040460 -0.040460 -0.009800 -0.009800   \n",
-      "1.1910 -0.124534 -0.096708 -0.096708 -0.041053 -0.041053 -0.008267 -0.008267   \n",
-      "1.1912 -0.121542 -0.102479 -0.102479 -0.045020 -0.045020 -0.007470 -0.007470   \n",
-      "1.1914 -0.120415 -0.113138 -0.113138 -0.055458 -0.055458 -0.012270 -0.012270   \n",
-      "1.1916 -0.114468 -0.119796 -0.119796 -0.064063 -0.064063 -0.016273 -0.016273   \n",
-      "1.1918 -0.098699 -0.118865 -0.118865 -0.067810 -0.067810 -0.016717 -0.016717   \n",
-      "1.1920 -0.086621 -0.125889 -0.125889 -0.080446 -0.080446 -0.023713 -0.023713   \n",
-      "1.1922 -0.064623 -0.123735 -0.123735 -0.086889 -0.086889 -0.027297 -0.027297   \n",
-      "\n",
-      "            1099  \n",
-      "1.1900 -0.004475  \n",
-      "1.1902 -0.003283  \n",
-      "1.1904 -0.002571  \n",
-      "1.1906 -0.002341  \n",
-      "1.1908 -0.002048  \n",
-      "1.1910 -0.001130  \n",
-      "1.1912  0.000139  \n",
-      "1.1914 -0.000552  \n",
-      "1.1916 -0.000806  \n",
-      "1.1918 -0.000198  \n",
-      "1.1920 -0.001260  \n",
-      "1.1922 -0.001593  \n",
-      "\n",
-      "[12 rows x 1100 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             0          1          2          3          4          5     \\\n",
-      "1.1900  27.270000  27.305099  27.297501  27.273500  27.345301  27.455400   \n",
-      "1.1902  27.833799  27.870001  27.864901  27.843399  27.914900  28.018600   \n",
-      "1.1904  27.587200  27.624001  27.620199  27.599400  27.667900  27.762300   \n",
-      "1.1906  27.883499  27.920601  27.916401  27.894100  27.958000  28.041599   \n",
-      "1.1908  27.829300  27.866301  27.861099  27.835699  27.893400  27.967501   \n",
-      "1.1910  27.981199  28.017700  28.010900  27.981701  28.032801  28.098200   \n",
-      "1.1912  28.010000  28.045900  28.036800  28.003201  28.047600  28.105499   \n",
-      "1.1914  28.091900  28.126900  28.114700  28.075701  28.112900  28.164000   \n",
-      "1.1916  28.149099  28.183001  28.167000  28.122200  28.153000  28.198601   \n",
-      "1.1918  28.213400  28.246099  28.225401  28.174000  28.198500  28.237400   \n",
-      "1.1920  28.269600  28.300900  28.275101  28.216400  28.233999  28.267500   \n",
-      "1.1922  29.467600  29.497299  29.466299  29.400101  29.411800  29.440701   \n",
-      "\n",
-      "             6          7          8          9     ...      1090      1091  \\\n",
-      "1.1900  27.486601  27.305700  27.216900  27.119699  ... -0.118857 -0.111546   \n",
-      "1.1902  28.036301  27.846201  27.760201  27.662201  ... -0.108961 -0.111565   \n",
-      "1.1904  27.767599  27.573799  27.490101  27.390800  ... -0.099562 -0.114882   \n",
-      "1.1906  28.036900  27.841600  27.759199  27.657301  ... -0.093377 -0.119118   \n",
-      "1.1908  27.953100  27.757500  27.675301  27.570000  ... -0.090679 -0.129910   \n",
-      "1.1910  28.076200  27.881201  27.798000  27.689301  ... -0.067840 -0.124534   \n",
-      "1.1912  28.077299  27.882000  27.797400  27.685600  ... -0.048116 -0.121542   \n",
-      "1.1914  28.131201  27.935499  27.849300  27.735201  ... -0.028296 -0.120415   \n",
-      "1.1916  28.161600  27.964399  27.876200  27.760599  ... -0.005587 -0.114468   \n",
-      "1.1918  28.196199  27.999500  27.910000  27.794399  ...  0.024039 -0.098699   \n",
-      "1.1920  28.224800  28.029400  27.939100  27.823999  ...  0.053613 -0.086621   \n",
-      "1.1922  29.395599  29.200001  29.109600  28.995899  ...  0.092073 -0.064623   \n",
-      "\n",
-      "            1092      1093      1094      1095      1096      1097      1098  \\\n",
-      "1.1900 -0.111546 -0.064371 -0.064371 -0.024247 -0.024247 -0.010858 -0.010858   \n",
-      "1.1902 -0.111565 -0.064812 -0.064812 -0.022047 -0.022047 -0.007399 -0.007399   \n",
-      "1.1904 -0.114882 -0.071732 -0.071732 -0.024473 -0.024473 -0.006163 -0.006163   \n",
-      "1.1906 -0.119118 -0.080630 -0.080630 -0.032278 -0.032278 -0.008231 -0.008231   \n",
-      "1.1908 -0.129910 -0.095222 -0.095222 -0.040460 -0.040460 -0.009800 -0.009800   \n",
-      "1.1910 -0.124534 -0.096708 -0.096708 -0.041053 -0.041053 -0.008267 -0.008267   \n",
-      "1.1912 -0.121542 -0.102479 -0.102479 -0.045020 -0.045020 -0.007470 -0.007470   \n",
-      "1.1914 -0.120415 -0.113138 -0.113138 -0.055458 -0.055458 -0.012270 -0.012270   \n",
-      "1.1916 -0.114468 -0.119796 -0.119796 -0.064063 -0.064063 -0.016273 -0.016273   \n",
-      "1.1918 -0.098699 -0.118865 -0.118865 -0.067810 -0.067810 -0.016717 -0.016717   \n",
-      "1.1920 -0.086621 -0.125889 -0.125889 -0.080446 -0.080446 -0.023713 -0.023713   \n",
-      "1.1922 -0.064623 -0.123735 -0.123735 -0.086889 -0.086889 -0.027297 -0.027297   \n",
-      "\n",
-      "            1099  \n",
-      "1.1900 -0.004475  \n",
-      "1.1902 -0.003283  \n",
-      "1.1904 -0.002571  \n",
-      "1.1906 -0.002341  \n",
-      "1.1908 -0.002048  \n",
-      "1.1910 -0.001130  \n",
-      "1.1912  0.000139  \n",
-      "1.1914 -0.000552  \n",
-      "1.1916 -0.000806  \n",
-      "1.1918 -0.000198  \n",
-      "1.1920 -0.001260  \n",
-      "1.1922 -0.001593  \n",
-      "\n",
-      "[12 rows x 1100 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data)"
    ]
